--- a/less/nav.less
+++ b/less/nav.less
@@ -4,7 +4,6 @@
     width: 100%;
     background-color: @bg-color;
     border-bottom: 1px solid black;
-    font-size: 1.55rem;
     font-weight: bold;
     
     .dropdown{
@@ -30,9 +29,7 @@
                 text-decoration: none;
                 color:@fontColor;
                 border-bottom: 1px solid black;
-                // width: 70px;
-                // height:32px;
-                font-size: 1.3rem;
+                font-size: 1.5rem;
                 margin: 0px 0 20rem 20px;
                 padding:8px 15px 5px 10px;
                 box-sizing: content-box;
@@ -53,6 +50,7 @@
         margin: 0 1.5rem 1rem .5rem;
         text-decoration: none;
         color:@fontColor;
+        font-size: 1.5rem;
     }
     
 }
@@ -63,7 +61,7 @@
         width: 100%;
         background-color: @bg-color;
         border-bottom: 1px solid black;
-        font-size: 1.55rem;
+        font-size: 1.6rem;
         font-weight: bold;
         
         .dropdown{
@@ -71,8 +69,7 @@
             
 
             .dropdown-button{
-                margin: 0px 0 0 0;   
-                // padding: 0 0 0 25px;           
+                margin: 0px 0 0 0;             
                 cursor: pointer;
                 display: contents;
                 max-width: 65px;
@@ -129,7 +126,7 @@
                 text-decoration: none;
                 color:@fontColor;
                 text-align: center;
-                font-size: 1.3rem;
+                font-size: 1.4rem;
             }
         }
     }
